# c_chan

./: Makefile  clib.json  meson.build
include/: chan.h  fsio.h  queue.h  stringfn.c  subprocess.h
src/: chan.c  fsio.c  queue.c
tests/: test_chan1.c  test_chan2.c
